@@ -2,6 +2,7 @@ package com.pakskiy.paymentProvider.filter;
 
 import com.pakskiy.paymentProvider.entity.MerchantEntity;
 import com.pakskiy.paymentProvider.service.MerchantService;
+import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
@@ -22,35 +23,54 @@ public class CustomWebFilter implements WebFilter {
     private final MerchantService merchantService;
 
     @Override
-    public Mono<Void> filter(ServerWebExchange exchange, WebFilterChain chain) {
+    public Mono<Void> filter(@NotNull ServerWebExchange exchange, @NotNull WebFilterChain chain) {
         exchange.getResponse().getHeaders().add("web-filter", "web-filter-test");
-        exchange.getRequest().getHeaders().add("web-filter", "web-filter-test");
 
 //        var headers = exchange.getRequest().getHeaders();
 //        var currentUrl = exchange.getRequest().getURI().getPath();
-//
+
+        String authorizationHeader = exchange.getRequest().getHeaders().getFirst("Authorization");
+
+        return merchantService.findByToken(authorizationHeader)
+                .switchIfEmpty(Mono.error(new RuntimeException("Token not founded")))
+                .flatMap(user -> {
+                    exchange.getAttributes().put("user", user.getId());
+                    return chain.filter(exchange);
+                }).onErrorResume(ex -> {
+                    exchange.getResponse().setStatusCode(HttpStatus.BAD_REQUEST);
+                    return chain.filter(exchange);
+                });
+
 //        if (currentUrl.contains("/api/v1/accounts")) {
 //            if (headers.containsKey("Authorization")) {
-//                merchantService.findByToken(headers.get("Authorization").get(0))
-//                        .map(MerchantEntity::getId)
-//                        .switchIfEmpty(Mono.error(new RuntimeException("Token not founded")))
-//                        .flatMap(el -> {
-//                            log.info("eoeoeoeo");
-////                            headers.add("merchantId", String.valueOf(el));
-//                            exchange.getRequest().getHeaders().add("web-filter", "web-filter-test");
+////                merchantService.findByToken(Objects.requireNonNull(headers.get("Authorization")).getFirst())
+////                        .map(MerchantEntity::getId)
+////                        .switchIfEmpty(Mono.error(new RuntimeException("Token not founded")))
+////                        .flatMap(el -> {
+////                            exchange.getAttributes().put("merchantId", String.valueOf(el));
+////                            return chain.filter(exchange);
+////                        }).onErrorResume(ex -> {
+////                            log.error("ERR_CREATE_COMMON {}", ex.getMessage(), ex);
+////                            exchange.getResponse().setStatusCode(HttpStatus.BAD_REQUEST);
+////                            return chain.filter(exchange);
+////                        }).subscribe(
+////                                it -> log.info("TIMER TICK AT {} END AT {}", it, LocalDateTime.now()),
+////                                error -> log.error("TIMER IS SHUTDOWN BECAUSE SEVERE ERROR ", error));
+//                return merchantService.findByToken(Objects.requireNonNull(headers.get("Authorization")).getFirst())
+//                        .flatMap(user -> {
+//                            exchange.getAttributes().put("user", user.getId());
 //                            return chain.filter(exchange);
-//                        }).onErrorResume(ex -> {
-//                            log.error("ERR_CREATE_COMMON {}", ex.getMessage(), ex);
-//                            exchange.getResponse().setStatusCode(HttpStatus.BAD_REQUEST);
-//                            return chain.filter(exchange);
-//                        }).subscribe(
-//                                it -> log.info("TIMER TICK AT {} END AT {}", it, LocalDateTime.now()),
-//                                error -> log.error("TIMER IS SHUTDOWN BECAUSE SEVERE ERROR ", error));
+//                        })
+//                        .switchIfEmpty(chain.filter(exchange));
+//
+//
+//
+////                exchange.getAttributes().put("merchantId", "merchantId");
 //            } else {
 //                exchange.getResponse().setStatusCode(HttpStatus.BAD_REQUEST);
 //                return chain.filter(exchange);
 //            }
 //        }
-        return chain.filter(exchange);
+////        return chain.filter(exchange);
     }
 }
